--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -17,7 +17,8 @@
 - name: Copy Kibana configuration.
   template:
     src: kibana.yml.j2
-    dest: "/opt/kibana/config/kibana.yml"
+    dest: "/etc/kibana/kibana.yml"
+    backup: yes
     owner: root
     group: root
     mode: 0644
